# python_packaging

./: README.md  pyproject.toml  requirements-qa.txt
src/packaging_geekoncall/: __init__.py  example.py
tests/: __init__.py  test_simple.py
